--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
-		<link rel="stylesheet" href="./main.css" />
-	</head>
 
-	<body>
-		<div id="root"></div>
-		<script type="module" src="./main.js"></script>
-	</body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+      <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
+      <link rel="stylesheet" href="./main.css" />
+      <!-- Font -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+      <style type="text/css">
+         html {
+            font-family: 'Roboto', sans-serif;
+         }
+      </style>
+   </head>
+
+   <body>
+      <div id="root"></div>
+      <script type="module" src="./main.js"></script>
+   </body>
+
 </html>
